large screen spacing fixes

--- a/src/components/demo.css
+++ b/src/components/demo.css
@@ -64,13 +64,13 @@
         flex-direction:row;
         margin-top:7%;
         margin-left: 10%;
-        margin-bottom:10%;
+        margin-bottom:12% !important;
     }
     .step-wrapper-reverse{
         flex-direction:row;
         margin-top:7%;
         margin-left: 10%;
-        margin-bottom:10%;
+        margin-bottom:12% !important;
     }
     .step-paragraph{
         width:35%;
